# displayxr-common

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
common/: atlas_capture.cpp  atlas_capture.h  atlas_capture_macos.mm  d3d11_renderer.cpp  d3d11_renderer.h  displayxr_manifest.cmake  hud_renderer.cpp  hud_renderer.h  input_handler.cpp  input_handler.h  logging.cpp  logging.h  mip_chain.h  mode_switch.cpp  mode_switch.h  optimus_dgpu_hint.c  rig_mode.cpp  rig_mode.h  rig_transition.cpp  rig_transition.h  stb_image_impl_macos.cpp  text_overlay.cpp  text_overlay.h  view_params.h  window_manager.cpp  window_manager.h  xr_session_common.cpp  xr_session_common.h
include/: camera3d_view.c  camera3d_view.h  display3d_view.c  display3d_view.h  displayxr_math_xrt.c  displayxr_math_xrt.h  dxr_view_math.c  dxr_view_math.h  projection_depth.h
tests/: CMakeLists.txt  common_smoke.cpp  selftest.c
